--- a/frontend/src/component/signup.css
+++ b/frontend/src/component/signup.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f0f4f8;
+    background-color:white;
   }
   
   .form-container {
