--- a/frontend/src/component/home.css
+++ b/frontend/src/component/home.css
@@ -2,7 +2,15 @@
 html, body {
   overflow-x: hidden;
   width: 100%;
+  font-family: Arial, sans-serif;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 
 .main {
   background-image: url('W:\coffee\frontend\src\assets\Screenshot 2024-11-07 221749-Photoroom.png');
@@ -10,6 +18,7 @@ html, body {
   background-position: center;
   height: 100vh;
   width: 100%;
+  font-family: Arial, sans-serif;
 }
 
 .crop {
@@ -120,6 +129,7 @@ html, body {
 .centerfind h1 {
   margin-bottom: 20px;
   font-size: 2.5rem;
+  
 }
 
 .centerfind p {
@@ -142,6 +152,11 @@ html, body {
   border-radius: 20px;
 }
 
+
+.imgsection .details h2{
+  font-size: 1.5rem;
+
+}
 .imgsection .details .myimg {
   width: 100%;
   height: 75%;
@@ -149,10 +164,11 @@ html, body {
 }
 
 .placename {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3.5rem;
+ justify-content: center;
+ display: flex;
+ align-items: center;
+ text-align: center;
+height: 20%;
 }
 
 .menusection {
