--- a/frontend/src/component/signup.css
+++ b/frontend/src/component/signup.css
@@ -70,7 +70,7 @@ body {
   /* Button */
   button[type="submit"] {
     width: 100%;
-    background-color: #007bff;
+    background-color: #888a8d;
     color: #ffffff;
     padding: 15px;
     border: none;
